2005-05-31  Marcus R. Brown  <mrbrown@0xd6.org>

	Initial import of adresd's SHA1 hash dictionary attack source.